# intel-oneAPI-hackathon

./: README.md
mandelbrot/: CMakeLists.txt  build.sh  mandelbrot.ipynb  q
mandelbrot/.ipynb_checkpoints/: accelerator-checkpoint.py  autogen-checkpoint.sh  mandelbrot-checkpoint.ipynb
mandelbrot/src/: mandel.hpp  mandel.hppe
mandelbrot/src/.ipynb_checkpoints/: main-checkpoint.cpp  mandel-checkpoint.hpp
